--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,10 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+    border: 1px solid
+}
 .img-button {
     background-image: url("https://cdn.pixabay.com/photo/2017/08/31/05/36/buildings-2699520_960_720.jpg");
     background-repeat: no-repeat;
@@ -10,7 +17,21 @@
 .frontpage {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
+}
+.frontpage h1 {
+    background-image: url("https://cdn.pixabay.com/photo/2017/08/31/05/36/buildings-2699520_960_720.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: large;
+    width: 100%;
+    height: 100%;
+    padding: 3em 3em;
+    color: #faf7f2;
+    font-size: 2.5rem;
+    text-align: center;  
 }
 body {
     background-color:#faf7f2;
@@ -69,4 +90,21 @@ footer {
     justify-content: center;
     background-color: #d6be96;
     padding: 3em;
+}
+@media(max-width: 500px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%
+    }
+    .links button {
+        width: 40%;
+        margin: 1% 0;
+    }
 }
